switch context menu orientation based on mouse click position to make sure the whole context menu is always visible

--- a/app/components/resources/map/context-menu.scss
+++ b/app/components/resources/map/context-menu.scss
@@ -9,6 +9,14 @@
   padding: 5px 0;
   min-width: 120px;
 
+  &.orientation-top {
+    bottom: initial !important;
+  }
+
+  &.orientation-bottom {
+    top: initial !important;
+  }
+
   .dropdown-item {
     padding: 0 10px;
   }
